# models/suggestions.js
@@ -1,0 +1,18 @@
+module.exports = (mongoose) => {
+  const Suggestion = mongoose.model(
+    'suggestions',
+    mongoose.Schema({
+      githubId: {
+        type: String,
+        required: true,
+      },
+      suggestion: {
+        type: String
+      }
+    }, {
+      timestamps: true
+    })
+  );
+
+  return Suggestion;
+};
